@@ -1,9 +1,20 @@
 \name{first.points}
 \alias{first.points}
-\docType{data}
 \title{first points}
 \description{Positioning Method for the first of a group of points.}
-\usage{first.points}
+\usage{
+first.points(d, ...)
+}
+\arguments{
+  \item{d}{
+}
+  \item{\dots}{
+}
+}
+
+
+
+\author{Toby Dylan Hocking <toby.hocking@inria.fr>}
 
 
 
